# django-amazon-clone

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
Amazon/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  serializers.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/views/: auth.py  user.py
apps/cart/: apps.py  (+8 more)
audit_log/: apps.py  serializers.py  signals.py  urls.py  utils.py  views.py
common/: apps.py  models.py  urls.py  views.py
config/: asgi.py  beat.py  celery.py  schedules.py  sentry.py  settings.py  urls.py
core/: admin.py  forms.py  models.py  urls.py  views.py
feedback/: admin.py  apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
notifications/: apps.py  consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
payment/: admin.py  apps.py  models.py  utils.py  views.py
templates/: README.md  add_new_address.html  add_new_product.html  base.html  change_password.html  drawer.html  footer.html  home_image_slider.html  login.html  navbar.html  new_change_password.html  product_main_page.html  product_review_form.html  product_search_page.html  register.html  review_order.html  scripts.html  select_address.html  select_payment_method.html  seller_account_intro.html  seller_account_register.html  seller_profle.html  seller_review_form.html  shopping_cart.html  template.html  your_account.html  your_addresses.html  your_orders.html  your_seller_account.html
tests/: test_audit_log.py  test_auth.py  test_common_crud.py  test_payment_crud.py
(+81 files in other folders)
